# turboquant-cpp

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
cpp/: CMakeLists.txt  README.md
cpp/bindings/: module.cpp
cpp/include/turboquant/: lloyd_max.hpp  turboquant.hpp
cpp/src/: lloyd_max.cpp  turboquant.cpp
cpp/tests/: test_basic.cpp
docs/: sglang-integration.md  tutorial-inference-integrations.md  vllm-integration.md
docs/diagrams/: turboquant-kv-architecture.drawio
examples/: README.md  sglang_dev_launcher.py  vllm_dev_launcher.py
scripts/: publish_pypi.sh
tests/: test_api_validation.py  test_imports.py  test_kv_bridge.py  test_sglang_dev_backend_optional.py  test_token_layout.py  test_vllm_dev_backend_optional.py
turboquant/: __init__.py  api.py  cli.py  dependencies.py  integration.py  metrics.py  synthetic_checks.py  types.py  validate.py  validation.py
turboquant/integrations/: __init__.py  token_layout.py
turboquant/integrations/sglang/: __init__.py  __main__.py  dev_backend.py  kv_bridge.py
turboquant/integrations/vllm/: __init__.py  __main__.py  dev_backend.py  kv_bridge.py
